@@ -167,7 +167,7 @@ int  xmin, ymin, xmax, ymax;
 		setcolor(thisray.rcol, 0.0, 0.0, 0.0);
 	} else {
 		rayorigin(&thisray, PRIMARY, NULL, NULL);
-		samplendx = rand_samp ? random() : samplendx+1;
+		samplendx++;
 		rayvalue(&thisray);
 	}
 
